--- a/src/index.html
+++ b/src/index.html
@@ -6,15 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="https://cdn3.devexpress.com/jslib/20.2.3/css/dx.common.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdn3.devexpress.com/jslib/20.2.3/css/dx.light.css" />
-
+    <link href="//cdn.syncfusion.com/ej2/material.css" rel="stylesheet" />
     </head>
 
-<body class="dx-viewport">
-    <div class="demo-container">
-        <demo-app>Loading...</demo-app>
-    </div>
+<body>
+    <app-root></app-root>
 </body>
 
 </html>
